Login UI enhancement

--- a/PicaLoop/res/layout/activity_welcome.xml
+++ b/PicaLoop/res/layout/activity_welcome.xml
@@ -6,35 +6,38 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/loginsplash"
     tools:context="com.picaloopand.picaloop.WelcomeActivity" >
 
-    <Button
-        android:id="@+id/fbLoginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="151dp"
-        android:text="@string/fbLogin_button" />
-
-    <Button
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/googleLoginButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/fbLoginButton"
+        android:layout_alignRight="@+id/fbLoginButton"
         android:layout_alignTop="@+id/fbLoginButton"
+        android:layout_below="@+id/fbLoginButton"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:text="@string/googleLogin_button" />
 
     <Button
         android:id="@+id/pclLoginbutton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/googleLoginButton"
+        android:layout_alignLeft="@+id/fbLoginButton"
+        android:layout_alignRight="@+id/fbLoginButton"
         android:layout_below="@+id/googleLoginButton"
         android:layout_marginTop="24dp"
         android:text="@string/pclLogin_button" />
-    
- 
+
+    <Button
+        android:id="@+id/fbLoginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="166dp"
+        android:text="@string/fbLogin_button" />
 
 </RelativeLayout> 
