Recognize sign in, signout, goto create if signed in commit

--- a/PicaLoop/res/menu/actionbar_menu.xml
+++ b/PicaLoop/res/menu/actionbar_menu.xml
@@ -11,5 +11,8 @@
         android:id="@+id/action_signoff"
         android:title="@string/action_signoff"
         app:showAsAction="never"/>
-
+     <item
+        android:id="@+id/action_profile"
+        android:title="@string/action_profile"
+        app:showAsAction="never"/>
 </menu>
