--- a/PicaLoop/res/layout/activity_user_profile.xml
+++ b/PicaLoop/res/layout/activity_user_profile.xml
@@ -1,23 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/loginsplash"
-    tools:context="com.picaloopand.picaloop.GoogleLoginActivity" >
-    
- </RelativeLayout> 
-
-<!--  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="com.picaloopand.picaloop.GoogleLoginActivity" >
+    tools:context="com.picaloopand.picaloop.UserProfileActivity" >
 
     <LinearLayout
         android:id="@+id/googlellProfile"
@@ -60,4 +47,4 @@
     </LinearLayout>
 
     
-</LinearLayout> -->
+</LinearLayout>
