--- a/PicaLoop/res/layout/activity_loop_details.xml
+++ b/PicaLoop/res/layout/activity_loop_details.xml
@@ -6,7 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.picaloopand.picaloop.CreateALoopActivity" >
-    
+    tools:context="com.picaloopand.picaloop.LoopDetailsActivity" >
+
+    <FrameLayout
+        android:id="@+id/bar_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
