--- a/PicaLoop/res/layout/activity_create_aloop.xml
+++ b/PicaLoop/res/layout/activity_create_aloop.xml
@@ -11,34 +11,27 @@
 
     <ImageButton
         android:id="@+id/foodButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+         android:layout_width="90dp"
+         android:layout_height="90dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_local_restaurant_black_48dp" />
+        android:src="@drawable/ic_local_restaurant_black_48dp"
+        android:background="@drawable/icons" />
 
     <ImageButton
         android:id="@+id/drinksButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_local_bar_black_48dp" />
-
+         android:layout_width="90dp"
+         android:layout_height="90dp"
+        android:src="@drawable/ic_local_bar_black_48dp"
+        android:background="@drawable/icons" />
 
      <ImageButton
          android:id="@+id/movieButton"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="90dp"
+         android:layout_height="90dp"
          android:layout_alignParentRight="true"
          android:layout_alignTop="@+id/foodButton"
+         android:background="@drawable/icons"
          android:src="@drawable/ic_local_movies_black_48dp" />
-
-     <ImageButton
-         android:id="@+id/spotSubmit"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignLeft="@+id/foodButton"
-         android:layout_alignParentBottom="true"
-         android:layout_marginBottom="49dp"
-         android:src="@drawable/ic_arrow_forward_black_48dp" />
 
      <ImageView
          android:id="@+id/drinksSelect"
@@ -64,6 +57,127 @@
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/movieButton"
          android:layout_alignRight="@+id/movieButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+
+      <ImageButton
+          android:id="@+id/spotSubmit"
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:layout_alignParentBottom="true"
+          android:layout_centerHorizontal="true"
+          android:background="@drawable/navigation"
+          android:src="@drawable/ic_arrow_forward_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/bikeButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/drinksButton"
+          android:layout_below="@+id/drinksButton"
+          android:layout_marginTop="16dp"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_directions_bike_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/groceryButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/foodButton"
+          android:layout_alignTop="@+id/bikeButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_local_grocery_store_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/waterButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/movieButton"
+          android:layout_alignTop="@+id/groceryButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_directions_ferry_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/hotelButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/bikeButton"
+          android:layout_below="@+id/bikeButton"
+          android:layout_marginTop="18dp"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_hotel_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/airportButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/groceryButton"
+          android:layout_alignTop="@+id/hotelButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_flight_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/photoButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/waterButton"
+          android:layout_alignTop="@+id/airportButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_local_see_black_48dp" />
+      
+  
+     
+     <ImageView
+         android:id="@+id/bikeSelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/bikeButton"
+         android:layout_alignRight="@+id/bikeButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+          
+      <ImageView
+         android:id="@+id/grocerySelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/groceryButton"
+         android:layout_alignRight="@+id/groceryButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+      
+      <ImageView
+         android:id="@+id/waterSelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/waterButton"
+         android:layout_alignRight="@+id/waterButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+      
+           <ImageView
+         android:id="@+id/hotelSelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/hotelButton"
+         android:layout_alignRight="@+id/hotelButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+     
+     <ImageView
+         android:id="@+id/airportSelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/airportButton"
+         android:layout_alignRight="@+id/airportButton"
+         android:visibility="gone"
+         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+          
+      <ImageView
+         android:id="@+id/photoSelect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignBottom="@+id/photoButton"
+         android:layout_alignRight="@+id/photoButton"
          android:visibility="gone"
          android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
 
