--- a/PicaLoop/res/layout/activity_create_aloop.xml
+++ b/PicaLoop/res/layout/activity_create_aloop.xml
@@ -21,8 +21,9 @@
         android:id="@+id/drinksButton"
          android:layout_width="90dp"
          android:layout_height="90dp"
-        android:src="@drawable/ic_local_bar_black_48dp"
-        android:background="@drawable/icons" />
+         android:background="@drawable/icons"
+         android:src="@drawable/button_select"
+          />
 
      <ImageButton
          android:id="@+id/movieButton"
@@ -32,38 +33,38 @@
          android:layout_alignTop="@+id/foodButton"
          android:background="@drawable/icons"
          android:src="@drawable/ic_local_movies_black_48dp" />
-
-     <ImageView
-         android:id="@+id/drinksSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+     
+    <ImageView
+          android:id="@+id/drinksSelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/drinksButton"
          android:layout_alignRight="@+id/drinksButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
-     
-     <ImageView
-         android:id="@+id/foodSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+          android:src="@drawable/ic_looks_one_black_48dp" />
+    
+    <ImageView
+          android:id="@+id/foodSelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/foodButton"
          android:layout_alignRight="@+id/foodButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+          android:src="@drawable/ic_looks_one_black_48dp" />
           
-      <ImageView
-         android:id="@+id/movieSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+    <ImageView
+          android:id="@+id/movieSelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/movieButton"
          android:layout_alignRight="@+id/movieButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+          android:src="@drawable/ic_looks_one_black_48dp" />
 
       <ImageButton
           android:id="@+id/spotSubmit"
-          android:layout_width="50dp"
-          android:layout_height="50dp"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:background="@drawable/navigation"
@@ -125,60 +126,116 @@
           android:background="@drawable/icons"
           android:src="@drawable/ic_local_see_black_48dp" />
       
+      <ImageButton
+          android:id="@+id/libraryButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/hotelButton"
+          android:layout_below="@+id/hotelButton"
+          android:layout_marginTop="18dp"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_local_library_black_48dp" />
   
+      
+      <ImageButton
+          android:id="@+id/natureButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/groceryButton"
+          android:layout_alignTop="@+id/libraryButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_landscape_black_48dp" />
+
+      <ImageButton
+          android:id="@+id/paintingButton"
+          android:layout_width="90dp"
+          android:layout_height="90dp"
+          android:layout_alignLeft="@+id/waterButton"
+          android:layout_alignTop="@+id/natureButton"
+          android:background="@drawable/icons"
+          android:src="@drawable/ic_palette_black_48dp" />
      
      <ImageView
          android:id="@+id/bikeSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/bikeButton"
          android:layout_alignRight="@+id/bikeButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:background="@drawable/ic_looks_one_black_48dp" />
           
       <ImageView
          android:id="@+id/grocerySelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/groceryButton"
          android:layout_alignRight="@+id/groceryButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:src="@drawable/ic_looks_one_black_48dp" />
       
       <ImageView
          android:id="@+id/waterSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/waterButton"
          android:layout_alignRight="@+id/waterButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:src="@drawable/ic_looks_one_black_48dp" />
       
-           <ImageView
+    <ImageView
          android:id="@+id/hotelSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/hotelButton"
          android:layout_alignRight="@+id/hotelButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:src="@drawable/ic_looks_one_black_48dp" />
      
      <ImageView
          android:id="@+id/airportSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/airportButton"
          android:layout_alignRight="@+id/airportButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:src="@drawable/ic_looks_one_black_48dp" />
           
       <ImageView
          android:id="@+id/photoSelect"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
          android:layout_alignBottom="@+id/photoButton"
          android:layout_alignRight="@+id/photoButton"
          android:visibility="gone"
-         android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+         android:src="@drawable/ic_looks_one_black_48dp" />
+
+     <ImageView
+         android:id="@+id/librarySelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
+         android:layout_alignBottom="@+id/libraryButton"
+         android:layout_alignRight="@+id/libraryButton"
+         android:visibility="gone"
+         android:src="@drawable/ic_looks_one_black_48dp" />
+     
+     <ImageView
+         android:id="@+id/natureSelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
+         android:layout_alignBottom="@+id/natureButton"
+         android:layout_alignRight="@+id/natureButton"
+         android:visibility="gone"
+         android:src="@drawable/ic_looks_one_black_48dp" />
+          
+      <ImageView
+         android:id="@+id/paintingSelect"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
+         android:layout_alignBottom="@+id/paintingButton"
+         android:layout_alignRight="@+id/paintingButton"
+         android:visibility="gone"
+         android:src="@drawable/ic_looks_one_black_48dp" />
+
+
 
 </RelativeLayout>
