Email sign in, with sign-out, password verification commit

--- a/PicaLoop/res/layout-land/fragment_bar_details.xml
+++ b/PicaLoop/res/layout-land/fragment_bar_details.xml
@@ -11,22 +11,10 @@
         android:id="@+id/bar_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/autoCompleteTextView1"
+        android:layout_alignLeft="@+id/baricon"
         android:layout_centerVertical="true"
         android:src="@drawable/bar" 
         android:contentDescription="@string/bar_image"/>
-      
-    <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/baricon"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="82dp"
-        android:ems="10"
-        android:hint="@string/Auto_Complete_Where_Text" >
-        <requestFocus />
-    </AutoCompleteTextView>
 
     <ImageView
         android:id="@+id/baricon"
@@ -34,27 +22,41 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_local_bar_black_48dp"
-        android:contentDescription="@string/bar_icon" />
+        android:contentDescription="@string/bar_icon"
+        android:src="@drawable/ic_local_bar_black_48dp" />
 
-        <TextView
+    <TextView
         android:id="@+id/barTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/bar_image"
-        android:layout_below="@+id/bar_image"
-        android:text="@string/barTextView" 
-        android:clickable="true"/>
-                
+        android:layout_alignBottom="@+id/autoCompleteTextView1"
+        android:layout_alignRight="@+id/bar_image"
+        android:layout_marginRight="103dp"
+        android:clickable="true"
+        android:text="@string/barTextView" />
+
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/autoCompleteTextView1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="39dp"
+        android:layout_alignLeft="@+id/bar_image"
+        android:layout_below="@+id/bar_image"
+        android:layout_marginLeft="18dp"
         android:ems="10"
         android:hint="@string/User_Comment"
         android:inputType="textMultiLine" />
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/baricon"
+        android:ems="10"
+        android:hint="@string/Auto_Complete_Where_Text" >
+
+        <requestFocus />
+    </AutoCompleteTextView>
 
 </RelativeLayout>
