--- a/PicaLoop/res/layout-land/activity_bar_details.xml
+++ b/PicaLoop/res/layout-land/activity_bar_details.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.picaloopand.picaloop.LoopDetailsActivity" >
+    tools:context="com.picaloopand.picaloop.BarDetailsActivity" >
 
     <LinearLayout
         android:layout_width="wrap_content"
