add loops table, remove keyboard by default from bardetails, scroll ui up ith keyboard up to see comment field, clean sup seral warnings commit.

--- a/PicaLoop/res/layout/fragment_comment.xml
+++ b/PicaLoop/res/layout/fragment_comment.xml
@@ -7,9 +7,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.picaloopand.picaloop.CommentFragment" >
+    
 
-	 <EditText
-	     android:id="@+id/editText1"
+	<EditText
+	     android:id="@+id/commentEditText"
 	     android:layout_width="match_parent"
 	     android:layout_height="wrap_content"
 	     android:layout_alignParentTop="true"
@@ -17,9 +18,6 @@
 	     android:layout_marginTop="1dp"
 	     android:ems="10"
 	     android:hint="@string/User_Comment"
-	     android:inputType="textMultiLine" >
-
-	     <requestFocus />
-	 </EditText>
+	     android:inputType="textMultiLine" />
 
 </RelativeLayout>
