--- a/PicaLoop/res/layout/activity_movie_details.xml
+++ b/PicaLoop/res/layout/activity_movie_details.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bar_details"
+    android:id="@+id/movie_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.picaloopand.picaloop.LoopDetailsActivity" >
-
+    
    <fragment
         android:id="@+id/fragment1"
         android:name="com.picaloopand.picaloop.LocationFragment"
@@ -18,8 +18,8 @@
         android:layout_marginTop="3dp"
         android:layout_centerHorizontal="true" />
 
-<ScrollView
-       android:id="@+id/bardetailsscroll"
+   <ScrollView
+       android:id="@+id/moviedetailsscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fragment1"
@@ -27,24 +27,25 @@
        android:layout_marginTop="3dp"
        android:layout_below="@+id/fragment1" >
 
-       <fragment
+  <fragment
            android:id="@+id/fragment2"
            android:name="com.picaloopand.picaloop.LoadMediaFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp" />
-   </ScrollView>
 
+ </ScrollView>
    <fragment
        android:id="@+id/fragment3"
        android:name="com.picaloopand.picaloop.CommentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:layout_below="@+id/bardetailsscroll"
+       android:layout_below="@+id/moviedetailsscroll"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true" />
+
    
-         <Button
+      <Button
        android:id="@+id/spotSubmit"
        android:layout_width="45dp"
        android:layout_height="45dp"
