--- a/PicaLoop/res/menu/create_loop_actionbar_menu.xml
+++ b/PicaLoop/res/menu/create_loop_actionbar_menu.xml
@@ -4,6 +4,11 @@
     tools:context="com.picaloopand.picaloop" >
 
     <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_white_48dp"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
