--- a/PicaLoop/res/menu/user_profile.xml
+++ b/PicaLoop/res/menu/user_profile.xml
@@ -4,9 +4,10 @@
     tools:context="com.picaloopand.picaloop" >
 
     <item
-        android:id="@+id/create_a_loop"
-        android:title="@string/create_a_loop"
-        app:showAsAction="withText|ifRoom"/>
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_white_48dp"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
