--- a/PicaLoop/res/values-v14/styles.xml
+++ b/PicaLoop/res/values-v14/styles.xml
@@ -1,12 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--
-        Base application theme for API 14+. This theme completely replaces
-        AppBaseTheme from BOTH res/values/styles.xml and
-        res/values-v11/styles.xml on API 14+ devices.
-    -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- API 14 theme customizations can go here. -->
-    </style>
-
+	<!-- extend one of the Theme.AppCompat themes -->
+	<style name="PicaLoopTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+	    <!-- customize the color palette -->
+	    <item name="colorPrimary">@color/primary</item>
+	    <item name="colorPrimaryDark">@color/primary_dark</item>
+	    <item name="colorAccent">@color/accent</item>
+	</style>
 </resources>
