--- a/PicaLoop/res/values/styles.xml
+++ b/PicaLoop/res/values/styles.xml
@@ -1,19 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
-
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-     <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+	<!-- extend one of the Theme.AppCompat themes -->
+	<style name="PicaLoopTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+	    <!-- customize the color palette -->
+	    <item name="colorPrimary">@color/primary</item>
+	    <item name="colorPrimaryDark">@color/primary_dark</item>
+	    <item name="colorAccent">@color/accent</item>
+	</style>
 </resources>
