--- a/PicaLoop/res/layout/fragment_load_media_grid.xml
+++ b/PicaLoop/res/layout/fragment_load_media_grid.xml
@@ -7,6 +7,6 @@
     android:numColumns="auto_fit"
     android:verticalSpacing="2dp"
     android:horizontalSpacing="2dp"
-    android:stretchMode="spacingWidthUniform"
+    android:stretchMode="columnWidth"
     android:gravity="center"
 />
