--- a/PicaLoop/res/values/colors.xml
+++ b/PicaLoop/res/values/colors.xml
@@ -3,10 +3,12 @@
    <color name="opaque_red">#f00</color>
    <color name="translucent_red">#80ff0000</color>
    <color name="primary">#9C27B0</color>
+   <color name="picaloopgreen">#CDDC39</color>
    <color name="primary_dark">#7B1FA2</color>
    <color name="accent">#E040FB</color>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
+   <color name="orange">#FFB74D</color>
    <color name="selected">#4A148C</color>
    <color name="purple_50">#f3e5f5</color>
 </resources>
