--- a/PicaLoop/res/layout/activity_bar_details.xml
+++ b/PicaLoop/res/layout/activity_bar_details.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.picaloopand.picaloop.BarDetailsActivity" >
+    tools:context="com.picaloopand.picaloop.PopulateDetailsActivity" >
 
    <fragment
        android:id="@+id/fragment1"
