--- a/PicaLoop/res/layout/fragment_register.xml
+++ b/PicaLoop/res/layout/fragment_register.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.picaloopand.picaloop.EmailLoginActivity" >
+    tools:context="com.picaloopand.picaloop.FragmentRegister" >
 
     <!-- Login progress -->
 
@@ -26,19 +26,17 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
-            android:id="@+id/email_login_form"
+            android:id="@+id/email_register_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-              <EditText
-                android:id="@+id/username"
+            <AutoCompleteTextView
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true" />
 
@@ -47,23 +45,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true" />
-
+            <EditText
+                android:id="@+id/firstname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_firstname"
+                android:maxLines="1"
+                android:singleLine="true" />
+            <EditText
+                android:id="@+id/lastname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_lastname"
+                android:maxLines="1"
+                android:singleLine="true" />
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_username"
+                android:maxLines="1"
+                android:singleLine="true" />
             <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="220dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
-            
-             <Button
                 android:id="@+id/email_register_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="220dp"
@@ -71,6 +77,28 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/action_register"
                 android:textStyle="bold" />
+	    <Button
+                android:id="@+id/load_picture"
+                style="?android:textAppearanceSmall"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/action_load_picture"
+                android:textStyle="bold" />
+	    <Button
+                android:id="@+id/bktologin_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/action_back"
+                android:textStyle="bold" />
+		<ImageView
+        		android:id="@+id/imgView"
+        		android:layout_width="fill_parent"
+        		android:layout_height="wrap_content"
+        		android:layout_weight="1"
+				android:src="@drawable/android3d"  />
         </LinearLayout>
     </ScrollView>
 
