--- a/PicaLoop/res/layout/fragment_spot_name.xml
+++ b/PicaLoop/res/layout/fragment_spot_name.xml
@@ -1,43 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.picaloopand.picaloop.SpotNameFragment" >
 
-    <Button
-        android:id="@+id/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/ok"
-        android:layout_alignBottom="@+id/ok"
-        android:layout_marginLeft="45dp"
-        android:layout_toRightOf="@+id/ok"
-        android:text="@string/Cancel" />
-
-    
-     <AutoCompleteTextView
+    <AutoCompleteTextView
         android:id="@+id/spotlocationautoComplete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
         android:ems="10"
-        android:hint="@string/Location_Text"/>
+        android:hint="@string/Location_Text" >
 
-    <Button
-        android:id="@+id/ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/spotlocationautoComplete"
-        android:layout_below="@+id/spotlocationautoComplete"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="68dp"
-        android:text="@string/OK" />
+        <requestFocus />
+    </AutoCompleteTextView>
+     
+    <fragment
+        android:id="@+id/spotmap_fragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="16dp" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal"
+	    android:paddingBottom="@dimen/activity_vertical_margin"
+	    android:paddingLeft="@dimen/activity_horizontal_margin"
+	    android:paddingRight="@dimen/activity_horizontal_margin"
+	    android:paddingTop="@dimen/activity_vertical_margin">
+	    <Button
+	        android:id="@+id/ok"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginBottom="93dp"
+	        android:layout_marginLeft="24dp"
+	        android:text="@string/OK" />
+	    <Button
+	        android:id="@+id/cancel"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="45dp"
+	        android:text="@string/Cancel" />
+	
+
+    </LinearLayout>
+
+</LinearLayout>
 
