Committing local changes

--- a/PicaLoop/res/layout/loop_grid_text.xml
+++ b/PicaLoop/res/layout/loop_grid_text.xml
@@ -6,15 +6,15 @@
 
     <ImageView
         android:id="@+id/loop_image"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="315dp"
+        android:layout_height="200dp"
         android:alpha="0.7"
         android:gravity="center" />
 
     <ImageView
         android:id="@+id/loop_icon"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="false"
@@ -28,11 +28,52 @@
 
     <TextView
         android:id="@+id/loop_info"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="315dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/loop_image"
+        android:layout_alignParentLeft="true"
+        android:alpha="0.7"
+        android:background="@color/black"
         android:gravity="bottom"
         android:textColor="@color/picaloopgreen"
-        android:textColorHint="@color/picaloopgreen"
-        android:textSize="20sp" />
+        android:textColorHint="@color/opaque_red"
+        android:textSize="20sp"
+        android:typeface="sans" />
+
+    <ImageView
+        android:id="@+id/loop_rating1"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignBottom="@+id/loop_image"
+        android:layout_alignRight="@+id/loop_image"
+        android:gravity="bottom"
+        android:scaleType="centerInside" />
+
+                <ImageView
+                    android:id="@+id/loop_rating2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignBottom="@+id/loop_image"
+                    android:layout_toLeftOf="@+id/loop_rating1"
+                    android:gravity="bottom"
+                    android:scaleType="centerInside" />
+
+                <ImageView
+                    android:id="@+id/loop_rating3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignTop="@+id/loop_rating2"
+                    android:layout_toLeftOf="@+id/loop_rating2"
+                    android:gravity="bottom"
+                    android:scaleType="centerInside" />
+
+                <ImageView
+                    android:id="@+id/loop_rating4"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignBottom="@+id/loop_image"
+                    android:layout_toLeftOf="@+id/loop_rating3"
+                    android:gravity="bottom"
+                    android:scaleType="centerInside" />
 
 </RelativeLayout>
