--- a/PicaLoop/res/layout/activity_loop_details_view.xml
+++ b/PicaLoop/res/layout/activity_loop_details_view.xml
@@ -1,11 +1,58 @@
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridview2"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_margin="10dp"
-    android:numColumns="2"
-    android:verticalSpacing="2dp"
-    android:horizontalSpacing="2dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.picaloopand.picaloop.LoopDetailsViewActivity" >
+
+    <RelativeLayout
+        android:id="@+id/buttons2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/rating"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/map"
+            android:layout_alignBottom="@+id/map"
+            android:layout_toLeftOf="@+id/map"
+            android:text="Rating" />
+
+        <Button
+            android:id="@+id/map"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Map" />
+
+        <Button
+            android:id="@+id/mentions"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/map"
+            android:text="Mentions" />
+
+    </RelativeLayout>
+
+    <GridView
+        android:id="@+id/gridview2"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/buttons2"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:horizontalSpacing="2dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="2dp" >
+
+    </GridView>
+
+</RelativeLayout>
