--- a/PicaLoop/res/values/colors.xml
+++ b/PicaLoop/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
    <color name="opaque_red">#f00</color>
    <color name="translucent_red">#80ff0000</color>
-   <color name="primary">#9C27B0</color>
+   <color name="primary">#FFB74D</color>
    <color name="picaloopgreen">#CDDC39</color>
    <color name="primary_dark">#7B1FA2</color>
    <color name="accent">#E040FB</color>
